--- a/Final Manuscript.Rmd
+++ b/Final Manuscript.Rmd
@@ -203,42 +203,42 @@ We report how we determined our sample size, all data exclusions (if any), all m
 Method
 
 ##Procedure
-The procedure used was identical to that in Garcia, Earnshaw & Quinn (2016), except for the instructions that the participants were given. In brief, that methodology is that each participant arrived at the laboratory and were then led into separate cubicles to preventa ny communication between the participants before the interaction. In addition, each participant was screened for prior acquaintance to confirm that they had not met prior to the study. They were asked to sign the consent form to participate, and the study was described as follows: “This is a study looking at how students form different types of relationships at college.” A prompt on the computer screen told the participants that they were assigned to the “College Relationships” condition and gave the following instructions:
+The procedure used was identical to that in @garcia2016objectification, except for the instructions that the participants were given. In brief, that methodology is that each participant arrived at the laboratory and were then led into separate cubicles to preventa ny communication between the participants before the interaction. In addition, each participant was screened for prior acquaintance to confirm that they had not met prior to the study. They were asked to sign the consent form to participate, and the study was described as follows: “This is a study looking at how students form different types of relationships at college.” A prompt on the computer screen told the participants that they were assigned to the “College Relationships” condition and gave the following instructions:
 
 There are many types of relationships people form in college. During the interaction, please think about your partner's potential as a romantic partner. Even if they are not the gender you are attracted to, you can still judge their potential as a romantic partner. After the interaction you will be asked to evaluate how dateable your partner is. In other words, we would like to know if you think someone would date your interaction partner. Also, your interaction partner will be evaluating you in the same manner. 
-Two participants were then brought into a larger interaction room where they sat on stools prearranged to be 36 inches apart. The experimenter instructed the participants to “get to know each other” for 10 minutes and then left the room. After 10 minutes, the experimenter came back into the room and stopped the interaction. The participants then went back to their individual cubicles and completed a set of post-interaction measures. Participants were then thanked for their participation and debriefed (Garcia et al., 2016). The full methodology used is found in Garcia et al. (2016)’s study.
+Two participants were then brought into a larger interaction room where they sat on stools prearranged to be 36 inches apart. The experimenter instructed the participants to “get to know each other” for 10 minutes and then left the room. After 10 minutes, the experimenter came back into the room and stopped the interaction. The participants then went back to their individual cubicles and completed a set of post-interaction measures. Participants were then thanked for their participation and debriefed @garcia2016objectification. The full methodology used is found in @garcia2016objectification’s study.
 
 ##Combining Samples
-Data from two different samples was used for this study. They are discussed below. In the measures section that follows we refer to them as Sample 1 and Sample 2. Sample 1 is from a co-ed liberal arts college in the northeast and Sample 2 is from a women’s liberal arts college in the northeast.
+Data from two different samples were used for this study and are discussed below. In the measures section that follows we refer to them as Sample 1 and Sample 2. Sample 1 is from a co-ed liberal arts college in the northeast and Sample 2 is from a women’s liberal arts college in the northeast.
 
 
 ##Post interaction Measures
-
 The following measures were collected in the order they are presented following the interaction. Correlations appear in Table 1, and descriptive statistics appear in Table 2. 
 
 ###Cognitive performance. 
-Cognitive performance was assessed using trigrams from the Remote Associates Task (McFarlin & Blascovich, 1984). Ten items were selected and presented to participants. For example, the correct answer for the trigram “Quack: Pond: Waddle” would be “Duck”. Participants are limited to 30 seconds. For every correct answer, 1 point is given. The mean score was `r mean_trigram` (SD = `r sd_trigram`). Cognitive performance was measured first in order to measure potential immediate detriments to performance (Garcia et al., 2016).
+Trigrams from the Remote Associates Task @mcfarlinblascovich1984 were utilized to assess cognitive performance after the interaction. Ten items were selected and presented to participants. For example, the correct answer for the trigram “Quack: Pond: Waddle” would be “Duck”. Participants are limited to 30 seconds. For every correct answer, 1 point is given. The mean score was `r mean_trigram` (SD = `r sd_trigram`). Cognitive performance was measured first in order to measure potential immediate detriments to performance @garcia2016objectification.
 
 ###SOO.
-To measure the participant’s objectification of their partner in the interaction, participants were asked a series of questions about the frequency of thoughts of several aspects of their partner (Garcia et al., 2016). Questions included aspects of their partner’s internal traits such as personality, friends, family, and extracurricular interests, as well as external traits such as body, appearance, clothing, and body parts. All questions were to be rated on a scale from 1 (not at all) to 7 (constantly). Objectification was measured by getting the difference between the average frequency of thought about their partner’s external traits (α = `r printnum(clark_physTSO_alpha)[1,1]` for Sample 1, α = `r printnum(smith_physTSO_alpha)[1,1]` for Sample 2) and frequency of thought about their partner’s internal traits ($\alpha$ = `r printnum(clark_funcTSO_alpha)[1,1]` for Sample 1, α = `r printnum(smith_funcTSO_alpha)[1,1]` for Sample 2). A positive score in this scale would indicate that the participant thought about their partner’s external traits more than the partner’s internal traits, and a negative score would indicate the opposite.
+To measure the participant’s objectification of their partner in the interaction, participants were asked a series of questions about the frequency of thoughts in relation to  multiple characteristics of their partner @garcia2016objectification. Questions included aspects of their partner’s internal traits such as personality, friends, family, and extracurricular interests, as well as external traits such as body, appearance, clothing, and body parts. All questions were to be rated on a scale from 1 (not at all) to 7 (constantly). Objectification was measured by getting the difference between the average frequency of thought about their partner’s external traits (α = `r printnum(clark_physTSO_alpha)[1,1]` for Sample 1, α = `r printnum(smith_physTSO_alpha)[1,1]` for Sample 2) and frequency of thought about their partner’s internal traits ($\alpha$ = `r printnum(clark_funcTSO_alpha)[1,1]` for Sample 1, α = `r printnum(smith_funcTSO_alpha)[1,1]` for Sample 2). A positive score in this scale would indicate that the participant thought about their partner’s external traits more than the partner’s internal traits, and a negative score would indicate the opposite.
 
 ###Interaction Authenticity.
-Just like Garcia et al. (2016), we assessed the extent to which participants felt comfortable in the interaction and felt it was authentic. We did this by asking them to rate the extent to which they felt the interaction was comfortable, happy, friendly, warm, easygoing, sincere, and authentic on a scale from 1 (not at all) to 7 (very much). Participants were also asked whether they thought their partner was authentic in the interaction, and if they felt they were authentic in the interaction. These questions were ranked on a scale from 1 (not authentic at all). These were combined to form the authenticity scale (α = `r printnum(clark_intauth_alpha)[1,1]` for Sample 1, α = `r printnum(smith_intauth_alpha)[1,1]` for Sample 2). 
+To assess the magnitude to which individuals felt comfortable in the interaction and perceived the interaction to be authentic, we asked participants to rate the extent to which they felt comfortable, happy, friendly, warm, easygoing, sincere, and authentic on a scale ranging from 1 (not at all) to 7 (very much), much alike @garcia2016objectification. Participants were additionally asked to rate their interaction partner’s authenticity as well as their own: ‘‘Do you think your partner was authentic during your interaction?’’ and ‘‘Were you authentic during your interaction?’’ These questions were ranked on a scale from 1 (not authentic at all). These were combined to form the authenticity scale (α = `r printnum(clark_intauth_alpha)[1,1]` for Sample 1, α = `r printnum(smith_intauth_alpha)[1,1]` for Sample 2). 	
 
 ###SSO.
-To assess state self-objectification, we used an average of two items from Saguy et al. (2010) that was also used in Garcia et al. (2016). Participants were asked to rank how much they agreed with the following statements: “During the interaction I felt more like a body than a full self” and “I felt more like a body than as a real person in the interaction”. Saguy et al. (2010) originally used 3 items, but in both samples the reliability of the scale was higher if we removed the third item, so we chose to only use the first two for our measure of SSO, leaving us with a reliable scale (α = `r printnum(clark_howbody_alpha)[1,1]` for Sample 1, and α = `r printnum(smith_howbody_alpha)[1,1]` for Sample 2.)
+To assess state self-objectification, we used an average of two items from @saguyetal2010 that were also used in @garcia2016objectification. Participants were asked to rank how much they agreed with the following statements: “During the interaction I felt more like a body than a full self” and “I felt more like a body than as a real person in the interaction”. Originally, @saguyetal2010 used 3 items, but in both samples the reliability of the scale was higher once the third item was removed, so we chose to only use the first two for our measure of SSO, leaving us with a reliable scale (α = `r printnum(clark_howbody_alpha)[1,1]` for Sample 1, and α = `r printnum(smith_howbody_alpha)[1,1]` for Sample 2.)
 
 ###Relationship Agency. 
-To assess how much relationship agency participants felt they would have in future relationships, we used the scale from Garcia et al. (2016), asking how likely it was that they would do the following: "ask someone out on a date," "open the door for your date," "pay for a date," "ask your boyfriend/girlfriend to marry you," "initiate sex with your girlfriend/boyfriend," "initiate condom use during sex," "surprise your boyfriend/ girlfriend with a gift," and "ask your girlfriend/boyfriend to move with you to a new place." Responses were measured on a scale ranging from 1 (not at all likely) to 7 (extremely likely). * talk about removing item 9.  Once this item was removed, the scale had moderately high reliability for both samples (α = `r printnum(clark_relag_alpha)[1,1]` for Sample 1, (α = `r printnum(smith_relag_alpha)[1,1]` for Sample 2).
+A scale was used from @garcia2016objectification to assess how much agency an individual believes they would possess in future romantic relationships. Participants were asked how likely it was that they would do the following: ‘‘ask someone out on a date,’’ ‘‘open the door for your date,’’ ‘‘pay for a date,’’ ‘‘ask your boyfriend/girlfriend to marry you,’’ ‘‘initiate sex with your girlfriend/boyfriend,’’ ‘‘initiate condom use during sex,’’ ‘‘surprise your boyfriend/ girlfriend with a gift,’’ and ‘‘ask your girlfriend/boyfriend to move with you to a new place.’’ Responses were measured on a scale ranging from 1 (not at all likely) to 7 (extremely likely). Item 9 was removed, and as a result, the scale had moderately high reliability for both samples (α = `r printnum(clark_relag_alpha)[1,1]` for Sample 1, (α = `r printnum(smith_relag_alpha)[1,1]` for Sample 2).
 
 ###Career Aspirations.
-To measure career aspirations, we used the 10-item adaptation of Gray & O’Brien (2007)’s Career Aspiration Scale used in Garcia et al. (2016). This asked participants how true statements were about their future careers on a scale from 0 (not at all true of me) to 4 (very true of me). Items include "I hope to become a leader in my career field" and "I hope to move up through any organization or business I work in." Items were fairly reliable (α = `r printnum(clark_careerasp_alpha)[1,1]` for Sample 1, α = `r printnum(smith_careerasp_alpha)[1,1]` for Sample 2).
+To conceptualize participants’ career aspirations after the interaction, we used the 10-item adaptation of @grayobrien2007’s Career Aspiration Scale employed in @garcia2016objectification, which asked participants to consider how true 10 statements were in regard to their future careers on a scale from 0 (not at all true of me) to 4 (very true of me). Items include "I hope to become a leader in my career field" and "I hope to move up through any organization or business I work in." Items were fairly reliable (α = `r printnum(clark_careerasp_alpha)[1,1]` for Sample 1, α = `r printnum(smith_careerasp_alpha)[1,1]` for Sample 2).
 
 ###TSO. 
-TSO was assessed using the Self-Objectification Questionnaire (Fredrickson et al., 1998; Noll & Fredrickson, 1998). This asks participants to rank order functional aspects of their bodies as well as physical self-concepts. The average rank of the functional aspects is then subtracted from the rank of the physical self-concepts. As was done in Garcia et al. (2016), all measures are multiplied by -1 so that positive scores correspond to more TSO. 
+Trait self-objectification (TSO) was assessed using the Self-Objectification Questionnaire (@fredricksonetal1998; @nollfredrickson1998), which evaluates the extent to which individuals view their bodies in observable versus nonobservable ways. The questionnaire asked participants to rank order both appearance and functional aspects of their bodies, from 1 (least important) to 10 (most important), with respect to physical self-concepts. Of the ten body attributes, five of the items were appearance-based (weight, sex appeal, physical attractiveness, firm/sculpted muscles and body measurements), and five of the items were competence-based (strength, physical coordination, energy level, health and physical fitness). Difference scores were computed by subtracting the sum of the 5 functional aspects/competence attributes (e.g., health, strength) from the sum of the 5 physical self-concepts/appearance attributes (e.g., physical attractiveness, weight), and all measures were multiplied by -1, as was done in @garcia2016objectification, so that positive scores indicated greater TSO. 
 
 ###Description of the Samples
-Participants consisted of thirty-two previously unacquainted female-identifying pairs from two liberal arts colleges in the northeast, for a total of sixty-four participants. Twelve of the pairs came from Sample 1, a co-ed liberal arts college, and twenty pairs came from Sample 2, a women’s liberal arts college. Data was originally collected from multiple genders in both same sex and mixed sex pairs. Sample 1 originally consisted of twenty-two pairs consisting of twelve men and thirty-two women. Sample 2 originally consisted of twenty-three pairs made up of forty-three women and one man, as well as two participants who did not identify with either category. Because the pattern of correlations between important study variables were similar across samples, the two datasets were then combined. For the purpose of consistency when combining data from the two schools, we limited the participants to same sex female pairs at the two colleges. These participants were mostly first-year college students, with an average age of `r mean_age` (SD = `r sd_age`). The sample was `r percent_white`% White/European American, `r percentage_black`% Black/African-American, `r percent_asian`% Asian/Pacific Islander, `r percent_latinx`% Latinx, and `r percent_other`% mixed-race. There were `r samerace_white` White/White pairs and `r samerace_minority` same race racial minority pairs, for a total of `r samerace_white + samerace_minority` same-race pairs. The remaining `r mixedrace_white + mixedrace_minority` were mixed race pairs, of which `r mixedrace_white` were White/racial minority pairings and `r mixedrace_minority` were cross-racial minority group pairs. `r percent_straight`% of the sample identified as heterosexual, and `r percent_queer`% identified as gay, lesbian or bisexual. 
+Thirty-two previously unacquainted self-identifying female-sex dyads (64 total participants) from two liberal arts institutions in the Northeast of the United States participated in this study.  More specifically, twelve of the pairs, which derived from Sample 1, were students at a co-ed liberal arts college, while the remaining twenty pairs who came from Sample 2 attended a women’s liberal arts college. Initially, data was collected from same-sex and mixed-sex dyads that comprised of male and female gendered individuals. Sample 1 originally consisted of twenty-two pairs, twelve men and thirty-two women. Twenty-three pairs made up of forty-three women and one man, as well as two participants who did not identify with either gender category, formed Sample 2. Due to similarities across samples in regard to correlation patterns between significant variables within this study, the two datasets were combined. For consistency, we limited participant data to same sex female pairs at the two colleges. These participants were mostly first-year college students, with an average age of `r mean_age` (SD = `r sd_age`). The sample was `r percent_white`% White/European American, `r percentage_black`% Black/African-American, `r percent_asian`% Asian/Pacific Islander, `r percent_latinx`% Latinx, and `r percent_other`% mixed-race. There were `r samerace_white` White/White pairs and `r samerace_minority` same race racial minority pairs, for a total of `r samerace_white + samerace_minority` same-race pairs. The remaining `r mixedrace_white + mixedrace_minority` were mixed race pairs, of which `r mixedrace_white` were White/racial minority pairings and `r mixedrace_minority` were cross-racial minority group pairs. `r percent_straight`% of the sample identified as heterosexual, and `r percent_queer`% identified as gay, lesbian or bisexual. 
+ 
   
 
 ## Material
@@ -310,9 +310,6 @@ colnames(corr.table)   <- c("$M$", "$SD$", "1", "2", "3", "4", "5")
 
 apa_table(corr.table, caption="Correlations among study variables.", escape=FALSE)
 ```
-
-
-
 
 
 ```{r, results='asis'}
