--- a/r-references.bib
+++ b/r-references.bib
@@ -13,3 +13,10 @@
   note = {R package version 0.1.0.9842},
   url = {https://github.com/crsh/papaja},
 }
+@Manual{R-dplyr,
+  title = {dplyr: A Grammar of Data Manipulation},
+  author = {Hadley Wickham and Romain François and Lionel Henry and Kirill Müller},
+  year = {2018},
+  note = {R package version 0.7.8},
+  url = {https://CRAN.R-project.org/package=dplyr},
+}
