--- a/references.bib
+++ b/references.bib
@@ -9,3 +9,48 @@
   publisher={SAGE Publications Sage CA: Los Angeles, CA}
 }
 
+@article{fredricksonetal1998,
+author = {L. Fredrickson, Barbara and Roberts, Tomi-Ann and M. Noll, Stephanie and Quinn, Diane and Twenge, Jean},
+year = {1998},
+month = {07},
+pages = {269-84},
+title = {That Swimsuit Becomes You: Sex Differences in Self-Objedification, Restrained Eating, and Math Performance},
+volume = {75},
+journal = {Journal of personality and social psychology},
+doi = {10.1037/0022-3514.75.1.269}
+}
+
+@article{nollfredrickson1998,
+author = {M. Noll, Stephanie and L. Fredrickson, Barbara},
+year = {1998},
+month = {07},
+pages = {623 - 636},
+title = {A Mediational Model Linking Self-Objectification, Body Shame, and Disordered Eating},
+volume = {22},
+journal = {Psychology of Women Quarterly},
+doi = {10.1111/j.1471-6402.1998.tb00181.x}
+}
+
+@article{grayobrien2007,
+author = {P. Gray, Michael and M. OBrien, Karen},
+year = {2007},
+month = {08},
+pages = {317-337},
+title = {Advancing the Assessment of Women's Career Choices: The Career Aspiration Scale},
+volume = {15},
+journal = {Journal of Career Assessment - J CAREER ASSESSMENT},
+doi = {10.1177/1069072707301211}
+}
+
+@article{saguyetal2010,
+author = {Saguy, Tamar and Quinn, Diane and F Dovidio, John and Pratto, Felicia},
+year = {2010},
+month = {02},
+pages = {178-82},
+title = {Interacting Like a Body: Objectification Can Lead Women to Narrow Their Presence in Social Interactions},
+volume = {21},
+journal = {Psychological science},
+doi = {10.1177/0956797609357751}
+}
+
+
