--- a/references.bib
+++ b/references.bib
@@ -53,4 +53,13 @@ journal = {Psychological science},
 doi = {10.1177/0956797609357751}
 }
 
-
+@article{mcfarlin1984remote,
+  title={On the Remote Associates Test (RAT) as an alternative to illusory performance feedback: A methodological note},
+  author={McFarlin, Dean B and Blascovich, Jim},
+  journal={Basic and Applied Social Psychology},
+  volume={5},
+  number={3},
+  pages={223--229},
+  year={1984},
+  publisher={Taylor \& Francis}
+}
